# nuglebot

./: CMakeLists.txt  README.md  package.xml
config/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml
launch/: move_base.launch  nuglebot_navigation.launch  nuglebot_slam.launch  nuglebot_small_room.launch  nuglebot_world.launch
map/: map001.pgm  map001.yaml  small_room.pgm  small_room.yaml
models/nugle_room/: model.config  model.sdf
models/nuglebot/: model.config  model.sdf
models/small_room/: model.config  model.sdf
rviz/: slam.rviz
urdf/: common_properties.xacro  diff_wheeled_robot.xacro  mir.urdf.xacro  nuglebot.gazebo.xacro  nuglebot.urdf.xacro  turtlebot3_waffle.gazebo.xacro  turtlebot3_waffle.urdf.xacro
urdf/include/: mir_100.gazebo.xacro  mir_100_v1.urdf.xacro  sick_s300.urdf.xacro
worlds/: nuglebot.world  small_room.world
